fix: added a visibility icon to the paassword input

--- a/styles/RegisterForm.module.scss
+++ b/styles/RegisterForm.module.scss
@@ -51,6 +51,12 @@
     }
 
     .lhs__content__form__input {
+        position: relative;
+
+        .lhs__content__form__input__password {
+            position: relative;
+        }
+
         input {
             width: 100%;
             height: 50px;
@@ -83,6 +89,15 @@
             @media screen and (max-width: 768px) {
                 font-size: 1rem;
             }
+        }
+
+        .lhs__content__form__input__password__icon {
+            font-size: 1.5em;
+            color: #ffd700;
+            position: absolute;
+            left: 90%;
+            top: 25px;
+            cursor: pointer;
         }
 
         button {
